--- a/src/pug/pages/anti-cellulite-massage.pug
+++ b/src/pug/pages/anti-cellulite-massage.pug
@@ -140,6 +140,15 @@ block variables
           }
         ]
       },
+      massageDescription: [
+        `Сначала мастер тщательно подготовит вашу кожу к процедуре. Он разогреет её мягкими поглаживаниями с согревающим маслом, обеспечит приток крови, и только после этого перейдёт к глубоким воздействиям.<br>
+          <br>
+          Такой аккуратный подход позволяет провести процедуру эффективно и безболезненно, а также избежать синяков и сосудистых звёздочек`,
+        `По желанию клиента специалист сделает обёртывание проблемных зон. Мы хотим, чтобы результат вас удивил и порадовал, и если видим, что обёртывание явно показано, предложим его сами, бесплатно`,
+        `Ручной антицеллюлитный массаж — самое эффективное средство, чтобы разгладить и подтянуть кожу, убрать все признаки целлюлита. Никакие аппараты, домашние скрабы и процедуры не сравнятся с руками профессионального массажиста, который промнёт и глубоко проработает все ваши ткани.<br>
+          <br>
+          Благодаря эффективности такого массажа, результат всего за один курс потрясает, он сравним с несколькими месяцами тренировок, ограничений в питании и домашних процедур`
+      ],
       faq: [
         {
           question: `Какие ощущения при процедуре, есть ли боль?`,
