--- a/src/pug/pages/back-massage.pug
+++ b/src/pug/pages/back-massage.pug
@@ -143,6 +143,17 @@ block variables
           }
         ]
       },
+      massageDescription: [
+        `Сеанс начнётся с подробной диагностики, где специалист сначала спросит вас о ваших проблемах, а затем проведёт осмотр. Мы всегда уделяем анализу столько времени, сколько потребуется, ведь от этого зависит успех дальнейшего лечения.<br>
+          <br>
+          Когда специалист проведёт диагностику, он расскажет вам о состоянии вашего здоровья и подберёт ту технику массажа, которая вам поможет`,
+        `Сама процедура — это детальная и кропотливая проработка, а не поверхностные касания. Мы выделяем на один сеанс 50 минут, этого достаточно, чтобы глубоко и качественно проработать всю спину, а также уделить внимание шейному отделу и голове.<br>
+          <br>
+          Проработку биоактивных точек на голове и шее мы сделаем вам в подарок. Это избавит вас от головных болей, мигрени и головокружений. Брать отдельный сеанс для этой зоны не нужно`,
+        `Вы почувствуете облегчение после первого сеанса. Благодаря расслаблению мышц, усилению кровообращения и лимфотока, позвонки и суставы насытятся полезными веществами. Это поможет вашей костной и хрящевой ткани восстановиться, уберёт все зажимы и воспаления.<br>
+          <br>
+          Результат будет быстрым, стабильным и безопасным — все виды массажей, которые мы практикуем, одобрены вертебрологами мирового уровня`
+      ],
       faq: [
         {
           question: `Я не верю, что массаж может помочь. Зажимы и боль в мышцах это одно дело. Но как он лечит грыжи, сколиоз и прочие заболевания?`,
