--- a/src/pug/pages/body-lymphatic-drainage.pug
+++ b/src/pug/pages/body-lymphatic-drainage.pug
@@ -136,6 +136,12 @@ block variables
           }
         ]
       },
+      massageDescription: [
+        `Лимфодренажный массаж влияет на весь организм, поэтому у нас его проводят только специалисты с медицинским образованием, которые знают всё о лимфатических узлах и сосудах, и ни в коем случае не навредят вам.<br>
+          <br>
+          Массажист использует поглаживания и надавливания, направленные по току лимфы. Эти движения регулируют и активируют лимфатическую систему, помогая организму наладить работу всех органов и систем и про&shy;вести естественную детоксикацию. В резуль&shy;тате улучшается и внешность, и здоровье`,
+        `Ручной лимфодренажный массаж в разы превосходит аппаратный, поскольку только чуткость рук профессионального и опытного массажиста может определить нужную глубину проработки тех или иных зон. Результат такого массажа — мощный оздоровляющий и эстетический эффект, снятие отёчности, видимое омоложение и разглаживание кожи`
+      ],
       faq: [
         {
           question: `Я слышала, что лимфодренажный массаж помогает худеть, это&nbsp;не&nbsp;так?`,
