--- a/src/pug/pages/chiromassage.pug
+++ b/src/pug/pages/chiromassage.pug
@@ -137,6 +137,19 @@ block variables
           }
         ]
       },
+      massageDescription: [
+        `В начале мастер наносит на лицо клиента гель алоэ-вера. Этот гель не закупоривает поры и идеально подходит для массажа.<br>
+          <br>
+          Пальцы массажиста скользят, не растягивая кожу, лицо после сеанса наполнено влагой, мышцы расслаблены. Что важно, гель алоэ абсолютно не вызывает воспалений`,
+        `Хиромассаж выполняется только руками, без каких-либо приспособлений.<br>
+          <br>
+          Процедура начинается с плавного разогрева. Массажист аккуратно, подушечками пальцев, проходится по контуру лица, прорабатывает шею, виски и лоб, разогревает всё лицо.<br>
+          <br>
+          Дальше начинается интенсивный этап, который включает лимфодренаж, интенсивные движе&shy;ния по массажным линиям и лифтинг отдель&shy;ных участков кожи. Завершают процедуру приятные, расслабляющие приёмы для мышц`,
+        `Хиромассаж лица дает прекрасный антивозрастной и общий улучшающий эффект, заметный с первого сеанса.<br>
+          <br>
+          Контур лица подтягивается, полностью уходят отёки и круги под глазами, кожа становится эластичной и упругой. Нормализуется жирность кожи, разглаживаются мимические морщины, лицо выглядит молодо и излучает здоровье`
+      ],
       faq: [
         locals.data.globalData.commonFaceFaq[0],
         locals.data.globalData.commonFaceFaq[1],
