--- a/src/pug/pages/classic-facial-massage.pug
+++ b/src/pug/pages/classic-facial-massage.pug
@@ -134,6 +134,17 @@ block variables
           }
         ]
       },
+      massageDescription: [
+        `В начале мастер наносит на лицо клиента гель алоэ-вера. Этот гель не закупоривает поры и идеально подходит для массажа.<br>
+          <br>
+          Пальцы массажиста скользят, не растягивая кожу, лицо после сеанса наполнено влагой, мышцы расслаблены. Что важно, гель алоэ абсолютно не вызывает воспалений`,
+        `Вся процедура проходит по строгой схеме клас&shy;сического массажа, то есть с минимальным дав&shy;лением и по направлению массажных линий.<br>
+          <br>
+          Такая техника обеспечивает правильный отток лимфы, а также значительно ускоряет кровообращение.<br>
+          <br>
+          За счет стимуляции кровообращения, кожа насыщается кислородом и питательными веществами, в ней запускается процесс регенерации`,
+        `Эффект после курса классического массажа довольно значительный. Заметно уменьшаются все возрастные проявления, подтягивается кожа, улучшается тонус мышц. Лицо выглядит здоровым и отдохнувшим, как после полноценного отпуска`
+      ],
       faq: [
         locals.data.globalData.commonFaceFaq[0],
         locals.data.globalData.commonFaceFaq[1],
