--- a/src/pug/pages/facial-lymphatic-drainage.pug
+++ b/src/pug/pages/facial-lymphatic-drainage.pug
@@ -134,6 +134,15 @@ block variables
           }
         ]
       },
+      massageDescription: [
+        `В начале мастер наносит на лицо клиента гель алоэ-вера. Этот гель не закупоривает поры и идеально подходит для массажа.<br>
+          <br>
+          Пальцы массажиста скользят, не растягивая кожу, лицо после сеанса наполнено влагой, мышцы расслаблены. Что важно, гель алоэ абсолютно не вызывает воспалений`,
+        `Процедура включает в себя разогрев и активную стадию массажа, во время которой массажист сжимает и разминает мышцы лица по специальной технике. Это улучшает циркуляцию лимфы, способствует детоксикации и избавлению от отёков.<br>
+          <br>
+          Работа массажиста проходит строго по линиям лимфотока. В результате разгона лимфы, клетки насыщаются кислородом, а из организма выходит лишняя жидкость`,
+        `Эффект после сеанса виден сразу, лицо выглядит отдохнувшим, пропадают мешки под глазами, кожа подтягивается. Цвет лица становится здоровым и однородным, кожа выглядит свежей, увлажнённой, наполненной энергией`
+      ],
       faq: [
         locals.data.globalData.commonFaceFaq[0],
         locals.data.globalData.commonFaceFaq[1],
