--- a/src/pug/pages/figure-modeling.pug
+++ b/src/pug/pages/figure-modeling.pug
@@ -142,6 +142,21 @@ block variables
           }
         ]
       },
+      massageDescription: [
+        `В начале мастер сделает лимфодренаж и подготовит тело к тому, чтобы активно отдавать лишнюю воду.<br>
+          <br>
+          С помощью поглаживаний и надавливаний по току лимфы, массажист усилит ваш лимфоток в разы, организм перестанет задерживать воду и отдаст скопившуюся межклеточную жидкость.<br>
+          <br>
+          Кожа будет разглаживаться быстрее, метаболизм ускорится и даже без диеты организм начнёт сжигать жир`,
+        `Далее следует глубокая проработка жировых отложений. С помощью интенсивных движений, мастер буквально формирует новые контуры вашего тела, избавляет от лишнего веса и целлюлита, стимулирует жиросжигание.<br>
+          <br>
+          Ручное моделирование в таком виде — наша авторская процедура, она работает гораздо лучше аппаратных методик или отдельно взятых массажей для улучшения фигуры`,
+        `Затем мастер сделает обёртывание всех проблемных зон — рук, ног, ягодиц и живота. Это подтянет кожу, дополнительно выведет лишнюю жидкость, и усилит антицеллюлитный эффект.<br>
+          <br>
+          Результат после сеанса будет заметен сразу, а после курса вы будете довольны своим новым телом и заряжены на дальнейшие изменения.<br>
+          <br>
+          Мы уверены в эффективности этой процедуры, но если вам не понравится, мы вернём деньги за сеанс`
+      ],
       faq: [
         {
           question: `Я правда смогу похудеть просто от курса массажа?`,
