--- a/src/pug/pages/fullbody-massage.pug
+++ b/src/pug/pages/fullbody-massage.pug
@@ -139,6 +139,19 @@ block variables
           }
         ]
       },
+      massageDescription: [
+        `Выполнение общего массажа начинается с лёгких поглаживающих и растирающих движений. Когда организм готов к более глубокому воздействию, специалист переходит к активной проработке.<br>
+          <br>
+          Техника самой процедуры варьируется от состояния и потребностей пациента`,
+        `Во время 60-минутного сеанса специалист проработает вам спину, шею, голову, руки и ноги. Процедура включает множество оздоровительных техник, которые улучшают кровообращение, усиливают лимфоток, и оказывают комплексное лечебное воздействие на организм.<br>
+          <br>
+          Также в организм поступает больший объем кислорода, а мышцы и суставы насыщаются полезными веществами`,
+        `Во время сеанса вы отдохнёте, расслабитесь, и получите удовольствие от приятной процедуры. Восстановление организма при общем массаже проходит очень эффективно, так что вы заметите эффект сразу после сеанса.<br>
+          <br>
+          Ваши мысли станут яснее, улучшится концентрация, на смену усталости придёт спокойствие и хорошее настроение.<br>
+          <br>
+          Кожа после массажа станет мягкой и нежной, так как процедура избавит её от ороговевших частиц`
+      ],
       faq: [
         {
           question: `Какие конкретно участки массируются, и как долго?`,
