--- a/src/pug/pages/japanese-asahi-massage.pug
+++ b/src/pug/pages/japanese-asahi-massage.pug
@@ -139,6 +139,19 @@ block variables
           }
         ]
       },
+      massageDescription: [
+        `В начале мастер наносит на лицо клиента гель алоэ-вера. Этот гель не закупоривает поры и идеально подходит для массажа.<br>
+          <br>
+          Пальцы массажиста скользят, не растягивая кожу, лицо после сеанса наполнено влагой, мышцы расслаблены. Что важно, гель алоэ абсолютно не вызывает воспалений`,
+        `Первая стадия массажа — разогрев и лимфодренаж. Массажист мягко стимулирует работу лимфатической системы, что помогает вывести токсины и подготовить кожу к активной работе.<br>
+          <br>
+          Второй этап массажа — глубокая проработка лицевых мышц и надкостницы. Это самый интенсивный этап, и именно в это время массажист избавляет вас от морщин, второго подбородка и носогубных складок`,
+        `Завершает процедуру воздействие на биологически активные точки на лице и шее. Это очень эффективная методика, которая идеально дополняет предыдущие этапы.<br>
+          <br>
+          Эффект после сеанса виден сразу, кожа напол&shy;нена энергией, подтянута и светится здоровьем.<br>
+          <br>
+          По желанию клиента, после сеанса специалист покажет пару простых приёмов самомассажа, которые можно делать во время умывания или нанесения крема`
+      ],
       faq: [
         locals.data.globalData.commonFaceFaq[0],
         locals.data.globalData.commonFaceFaq[1],
