--- a/src/pug/pages/sculptural-buccal-massage.pug
+++ b/src/pug/pages/sculptural-buccal-massage.pug
@@ -139,6 +139,17 @@ block variables
           }
         ]
       },
+      massageDescription: [
+        `В начале мастер наносит на лицо клиента гель алоэ-вера. Этот гель не закупоривает поры и идеально подходит для массажа.<br>
+          <br>
+          Пальцы массажиста скользят, не растягивая кожу, лицо после сеанса наполнено влагой, мышцы расслаблены. Что важно, гель алоэ абсолютно не вызывает воспалений`,
+        `Мастер начинает бережно работать с лицом. Прогревает кожу, мягко проглаживает мышцы, и осторожно переходит к более глубоким воздействиям.<br>
+          <br>
+          Часть воздействий на мышцы происходит с внешней стороны лица, часть с внутренней, через рот. Это позволяет проработать ткани очень глубоко и добиться невероятных результатов. Конечно, мастер работает в одноразовых перчатках и очень аккуратно`,
+        `Эффект после сеанса виден сразу, появляется румянец, сходят отёки, лицо подтянуто. А эффект от курса поражает, он действительно способен полностью заменить пластику.<br>
+          <br>
+          Причём если поддерживать результат, он будет держаться всю жизнь. При пластике это невозможно, лицо со временем начнёт требовать более серьёзных воздействий, что отразится на внешности. С массажем ваша красота будет в безопасности`
+      ],
       faq: [
         locals.data.globalData.commonFaceFaq[0],
         locals.data.globalData.commonFaceFaq[1],
