--- a/src/pug/pages/sports-massage.pug
+++ b/src/pug/pages/sports-massage.pug
@@ -142,6 +142,15 @@ block variables
           }
         ]
       },
+      massageDescription: [
+        `В начале процедуры специалист спросит вас о спортивных нагрузках и зонах, на которые вы прицельно работаете в спортзале. Это позволит выбрать правильную технику и уделить нужным мышцам больше внимания`,
+        `Далее следует интенсивный массаж, который включает такие приёмы как поглаживание, выжимание, растирание, разминание, вибрацию и точечное воздействие.<br>
+          <br>
+          Вы почувствуете даже самые глубокие мышцы и получите удовольствие от их проработки. Болезненность спортивного массажа возможна, но только если у вас очень сильно забиты мышцы. Для большинства он довольно приятен`,
+        `Хорошее состояние мышц — это их гармоничное развитие. Но во время тренировок какие-то мышцы работают больше, чем другие — в результате может появиться гипертонус мышц. Это плохо влияет на развитие красивой мускулатуры, получается дисбаланс, который вредит и внешности, и здоровью.<br>
+          <br>
+          Спортивный массаж помогает распределить нагрузку равномерно, на каждую мышцу, и вместе с тренировками формирует красивое и здоровое тело`
+      ],
       faq: [
         {
           question: `Если я не занимаюсь спортом, мне есть смысл идти на этот массаж?`,
