--- a/src/assets/scss/utils/themes.scss
+++ b/src/assets/scss/utils/themes.scss
@@ -94,6 +94,14 @@ $theme-11-alt-h: 26;
 $theme-11-alt-s: 96%;
 $theme-11-alt-l: 67%;
 
+// Theme 12 - Back massage
+$theme-12-h: 202;
+$theme-12-s: 100%;
+$theme-12-l: 62%;
+$theme-12-alt-h: 202;
+$theme-12-alt-s: 100%;
+$theme-12-alt-l: 62%;
+
 $themes: (
   // Theme main
   'main': (
@@ -598,16 +606,16 @@ $themes: (
   // Theme 12 - Back massage
   '12': (
     'id': '12',
-    'primary': hsl($theme-main-h, $theme-main-s, $theme-main-l),
-    'primary-dark': hsl($theme-main-h, $theme-main-s, $theme-main-l - 10%),
-    'primary-light': hsl($theme-main-h, $theme-main-s, $theme-main-l + 10%),
-    'primary-transparent': hsla($theme-main-h, $theme-main-s, $theme-main-l, 0.7),
-    'primary-x-transparent': hsla($theme-main-h, $theme-main-s, $theme-main-l, 0.3),
-    'secondary': hsl($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l),
-    'secondary-dark': hsl($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l - 10%),
-    'secondary-light': hsl($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l + 10%),
-    'secondary-transparent': hsla($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l, 0.7),
-    'secondary-x-transparent': hsla($theme-main-alt-h, $theme-main-alt-s, $theme-main-alt-l, 0.3),
+    'primary': hsl($theme-12-h, $theme-12-s, $theme-12-l),
+    'primary-dark': hsl($theme-12-h, $theme-12-s, $theme-12-l - 10%),
+    'primary-light': hsl($theme-12-h, $theme-12-s, $theme-12-l + 10%),
+    'primary-transparent': hsla($theme-12-h, $theme-12-s, $theme-12-l, 0.7),
+    'primary-x-transparent': hsla($theme-12-h, $theme-12-s, $theme-12-l, 0.3),
+    'secondary': hsl($theme-12-alt-h, $theme-12-alt-s, $theme-12-alt-l),
+    'secondary-dark': hsl($theme-12-alt-h, $theme-12-alt-s, $theme-12-alt-l - 10%),
+    'secondary-light': hsl($theme-12-alt-h, $theme-12-alt-s, $theme-12-alt-l + 10%),
+    'secondary-transparent': hsla($theme-12-alt-h, $theme-12-alt-s, $theme-12-alt-l, 0.7),
+    'secondary-x-transparent': hsla($theme-12-alt-h, $theme-12-alt-s, $theme-12-alt-l, 0.3),
     'background': hsl(200, 100%, 97%),
     'header-image-1': (
       'small': (
