--- a/src/pug/includes/modules/svg-sprite/svg-sprite.pug
+++ b/src/pug/includes/modules/svg-sprite/svg-sprite.pug
@@ -4,6 +4,8 @@ svg.svg-sprite.visually-hidden(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="h
       path(d="M0 81C0 25.1553 56.8143 0 79.4335 0C188.01 5.08746e-10 257.377 89.5528 375.001 39.2422V81H0Z")
     symbol#bg-wave-2(viewBox="0 0 375 55")
       path(d="M375 41.1928V0H0V26C68 70 118 60 230 16C313.793 -16.9189 368.333 7.52617 375 41.1928Z")
+    symbol#dashed-path(viewBox="0 0 578 903" xmlns="http://www.w3.org/2000/svg")
+      path(d="M253.501 4.87636C555.42 -33.1236 766.111 316.653 318.001 389.876C-192.999 473.376 29.3905 849.825 201.001 900.876" stroke-width="3" stroke-dasharray="3 7")
     symbol#star-icon(viewBox="0 0 42 40")
       path(d="M21 0L25.9393 15.2016H41.9232L28.992 24.5967L33.9313 39.7984L21 30.4033L8.06872 39.7984L13.008 24.5967L0.0767574 15.2016H16.0607L21 0Z")
     symbol#polystar(viewBox="0 0 212 217")
