Finish more massages block and add socials section

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -99,6 +99,8 @@
 @use 'blocks/articles/articles';
 @use 'blocks/articles/article-card';
 
+@use 'blocks/more-massages/more-massages';
+
 @use 'blocks/socials/socials';
 
 @use 'blocks/map-block/map-block';
