--- a/src/pug/pages/anti-cellulite-massage.pug
+++ b/src/pug/pages/anti-cellulite-massage.pug
@@ -179,7 +179,8 @@ block variables
       ],
       priceList: {
         showPromo: true
-      }
+      },
+      moreMassages: [8, 7, 11, 12, 6]
     }
 
 block content
@@ -192,6 +193,8 @@ block content
   include ../includes/modules/content/massage-description
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
+  include ../includes/modules/content/more-massages
+  include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
 
 block script
