--- a/src/pug/pages/neck-massage.pug
+++ b/src/pug/pages/neck-massage.pug
@@ -154,7 +154,8 @@ block variables
       ],
       priceList: {
         showPromo: false
-      }
+      },
+      moreMassages: [8, 12, 6, 11]
     }
 
 block content
@@ -165,6 +166,8 @@ block content
   include ../includes/modules/content/features-list
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
+  include ../includes/modules/content/more-massages
+  include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
 
 block script
