--- a/src/pug/utils/global-data.pug
+++ b/src/pug/utils/global-data.pug
@@ -3,6 +3,7 @@
     currentYear: new Date().getFullYear(),
     massages: {
       'back-massage': {
+        id: 12,
         name: 'Лечебный массаж спины',
         fullName: 'Лечебный массаж спины',
         url: 'back-massage.html',
@@ -15,9 +16,11 @@
           first: 1900,
           standard: 2400
         },
-        duration: 50
+        duration: 50,
+        shortDescription: 'Убирает боль в спине, лечит заболева&shy;ния позвоночника, возвращает свободу движений и активную жизнь'
       },
       'body-lymphatic-drainage': {
+        id: 8,
         name: 'Лимфодренажный',
         fullName: 'Лимфодренажный массаж тела',
         url: 'body-lymphatic-drainage.html',
@@ -26,9 +29,11 @@
           first: 1900,
           standard: 2400
         },
-        duration: 60
+        duration: 60,
+        shortDescription: 'Рекомендован при отёках любой части тела, лишнем весе, тяжести в ногах. Оздоравливает весь организм'
       },
       'figure-modeling': {
+        id: 7,
         name: 'Ручное моделирование фигуры',
         fullName: 'Ручное моделирование фигуры',
         url: 'figure-modeling.html',
@@ -41,9 +46,11 @@
         promo: {
           text: 'Акция — скидка на первый сеанс 25%',
           starPlacement: 2 // 1 - massage name, 2 - first price, 3 - second price, 4 - duration
-        }
+        },
+        shortDescription: 'Рекомендован при выраженном целлюлите. Процедура включает лимфодренаж и обёртывание'
       },
       'fullbody-massage': {
+        id: 11,
         name: 'Общий массаж тела',
         fullName: 'Общий массаж тела',
         url: 'fullbody-massage.html',
@@ -52,9 +59,11 @@
           first: 1900,
           standard: 2400
         },
-        duration: 60
+        duration: 60,
+        shortDescription: 'Расслабляющий и оздоравливающий массаж всего тела, поможет справиться со стрессом и улучшит сон'
       },
       'sports-massage': {
+        id: 6,
         name: 'Спортивный',
         fullName: 'Спортивный массаж',
         url: 'sports-massage.html',
@@ -63,9 +72,11 @@
           first: 1900,
           standard: 2400
         },
-        duration: 60
+        duration: 60,
+        shortDescription: 'Для восстановления после тренировок или спортивных травм, и общего здоровья тела'
       },
       'anti-cellulite-massage': {
+        id: 9,
         name: 'Антицеллюлитный',
         fullName: 'Антицеллюлитный массаж',
         url: 'anti-cellulite-massage.html',
@@ -74,9 +85,11 @@
           first: 1900,
           standard: 2400
         },
-        duration: 60
+        duration: 60,
+        shortDescription: 'Рекомендован при выраженном целлюлите, если нет цели сильно похудеть. Включает обёртывание'
       },
       'neck-massage': {
+        id: 10,
         name: 'Шейно-воротниковой зоны',
         fullName: 'Массаж шейно-воротниковой зоны',
         url: 'neck-massage.html',
@@ -85,9 +98,11 @@
           first: 800,
           standard: 800
         },
-        duration: 15
+        duration: 15,
+        shortDescription: ''
       },
       'sculptural-buccal-massage': {
+        id: 1,
         name: 'Скульптурно-буккальный',
         fullName: 'Скульптурно-буккальный массаж лица',
         url: 'sculptural-buccal-massage.html',
@@ -104,9 +119,11 @@
         promo: {
           text: 'Акция — скидка на июль и август 25%',
           starPlacement: 3 // 1 - massage name, 2 - first price, 3 - second price, 4 - duration
-        }
+        },
+        shortDescription: 'Самый эффективный массаж лица. Полноценная альтернатива пластике, омоложение и улучшение черт лица'
       },
       'facial-lymphatic-drainage': {
+        id: 3,
         name: 'Лимфодренажный',
         fullName: 'Лимфодренажный массаж лица',
         url: 'facial-lymphatic-drainage.html',
@@ -115,9 +132,11 @@
           first: 1900,
           standard: 2400
         },
-        duration: 60
+        duration: 60,
+        shortDescription: 'Рекомендован при отёках лица, мешках под глазами. Эффект первого сеанса очень наглядный'
       },
       'classic-facial-massage': {
+        id: 2,
         name: 'Классический',
         fullName: 'Классический массаж лица',
         url: 'classic-facial-massage.html',
@@ -126,9 +145,11 @@
           first: 1800,
           standard: 2300
         },
-        duration: 50
+        duration: 50,
+        shortDescription: 'Восстановление природного здоровья и тонуса мышц, мягкая проработка'
       },
       'chiromassage': {
+        id: 5,
         name: 'Хиромассаж',
         fullName: 'Хиромассаж лица',
         url: 'chiromassage.html',
@@ -137,9 +158,11 @@
           first: 1900,
           standard: 2400
         },
-        duration: 60
+        duration: 60,
+        shortDescription: 'Сочетание европейской и восточной техники, наполняет энергией, возвращает в ресурс'
       },
       'japanese-asahi-massage': {
+        id: 4,
         name: 'Японский массаж Асахи',
         fullName: 'Массаж лица Асахи-Зоган',
         url: 'japanese-asahi-massage.html',
@@ -148,7 +171,8 @@
           first: 2100,
           standard: 2800
         },
-        duration: 60
+        duration: 60,
+        shortDescription: 'Японский формирующий массаж. Глубокая, интенсивная проработка мышц и костных тканей'
       }
     },
     mainPromo: {
