--- a/src/pug/pages/chiromassage.pug
+++ b/src/pug/pages/chiromassage.pug
@@ -162,7 +162,8 @@ block variables
       ],
       priceList: {
         showPromo: true
-      }
+      },
+      moreMassages: [3, 1, 2, 4]
     }
 
 block content
@@ -175,6 +176,8 @@ block content
   include ../includes/modules/content/massage-description
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
+  include ../includes/modules/content/more-massages
+  include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
 
 block script
