--- a/src/pug/pages/classic-facial-massage.pug
+++ b/src/pug/pages/classic-facial-massage.pug
@@ -157,7 +157,8 @@ block variables
       ],
       priceList: {
         showPromo: true
-      }
+      },
+      moreMassages: [3, 1, 4, 5]
     }
 
 block content
@@ -170,6 +171,8 @@ block content
   include ../includes/modules/content/massage-description
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
+  include ../includes/modules/content/more-massages
+  include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
 
 block script
