--- a/src/pug/pages/fullbody-massage.pug
+++ b/src/pug/pages/fullbody-massage.pug
@@ -172,7 +172,8 @@ block variables
       ],
       priceList: {
         showPromo: true
-      }
+      },
+      moreMassages: [8, 12, 6, 7, 9]
     }
 
 block content
@@ -184,6 +185,8 @@ block content
   include ../includes/modules/content/massage-description
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
+  include ../includes/modules/content/more-massages
+  include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
 
 block script
