--- a/src/pug/pages/sculptural-buccal-massage.pug
+++ b/src/pug/pages/sculptural-buccal-massage.pug
@@ -166,7 +166,8 @@ block variables
       ],
       priceList: {
         showPromo: true
-      }
+      },
+      moreMassages: [3, 5, 2, 4]
     }
 
 block content
@@ -179,6 +180,8 @@ block content
   include ../includes/modules/content/massage-description
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
+  include ../includes/modules/content/more-massages
+  include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
 
 block script
