--- a/src/pug/pages/sports-massage.pug
+++ b/src/pug/pages/sports-massage.pug
@@ -171,7 +171,8 @@ block variables
       ],
       priceList: {
         showPromo: true
-      }
+      },
+      moreMassages: [8, 12, 11, 7, 9]
     }
 
 block content
@@ -183,6 +184,8 @@ block content
   include ../includes/modules/content/massage-description
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
+  include ../includes/modules/content/more-massages
+  include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
 
 block script
