Add body lymphatic drainage indications

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -85,6 +85,8 @@
 
 @use 'blocks/massage-description/massage-description';
 
+@use 'blocks/indications/indications';
+
 @use 'blocks/faq/faq';
 
 @use 'blocks/price-list/price-list';
