--- a/src/pug/pages/body-lymphatic-drainage.pug
+++ b/src/pug/pages/body-lymphatic-drainage.pug
@@ -142,12 +142,32 @@ block variables
           Массажист использует поглаживания и надавливания, направленные по току лимфы. Эти движения регулируют и активируют лимфатическую систему, помогая организму наладить работу всех органов и систем и про&shy;вести естественную детоксикацию. В резуль&shy;тате улучшается и внешность, и здоровье`,
         `Ручной лимфодренажный массаж в разы превосходит аппаратный, поскольку только чуткость рук профессионального и опытного массажиста может определить нужную глубину проработки тех или иных зон. Результат такого массажа — мощный оздоровляющий и эстетический эффект, снятие отёчности, видимое омоложение и разглаживание кожи`
       ],
+      indications: {
+        title: 'Показания к&nbsp;лимфодренажному массажу',
+        list: [
+          'Дряблость кожных покровов, сниженный тургор кожи',
+          'Лишний вес, локальные жировые отложения',
+          'Целлюлит, особенно его отечная форма',
+          'Отечность лица, мешки и&nbsp;синяки под&nbsp;глазами',
+          'Нарушение обмена веществ',
+          'Варикозное расширение вен',
+          'Лечение лимфедемы, лимфостаза ног и&nbsp;рук',
+          'Профилактика варикозного заболевания&nbsp;вен',
+          'Общая зашлакованность организма, слабый иммунитет',
+          'Прыщи, угревые высыпания',
+          'Нервное перенапряжение, общая усталость организма'
+        ],
+        sticker: {
+          mainText: '2',
+          secondaryText: 'сеанса в&nbsp;неделю оптимальны, чаще не&nbsp;нужно'
+        }
+      },
       faq: [
         {
           question: `Я слышала, что лимфодренажный массаж помогает худеть, это&nbsp;не&nbsp;так?`,
           answer: `Похудение не ограничивается только уходом жира, многие лишние килограммы на теле вызваны отёками и застоем межклеточной жидкости. Именно вода уходит в первые дни диеты, поэтому в начале похудения вес уходит быстро, а после замедляется — сгонять жир тяжелее. Если вы сильно отекаете, то лимфодренажный массаж даст хороший результат. Когда отёки уйдут, вы станете выглядеть гораздо стройнее.<br>
             <br>
-            Но если вы настроены на значительное похудение, самый быстрый и долгосрочный результат даст ручное моделирование фигуры и налаженный режим питания. Если вы хотите наладить здоровье в целом и сбросить вес в спокойном темпе, лимфодренажный массаж будет хорошим помощником при диете, он ускорит процесс похудения, а стройнеющая фигура удержит вашу мотивацию и не даст сорваться.`
+            Но если вы настроены на значительное похудение, самый быстрый и долгосрочный результат даст <a class='link link_primary underline' href='figure-modeling.html'>ручное моделирование фигуры</a> и налаженный режим питания. Если вы хотите наладить здоровье в целом и сбросить вес в спокойном темпе, лимфодренажный массаж будет хорошим помощником при диете, он ускорит процесс похудения, а стройнеющая фигура удержит вашу мотивацию и не даст сорваться.`
         },
         {
           question: `Какие ощущения при процедуре, есть ли боль?`,
@@ -175,6 +195,7 @@ block content
   include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
   include ../includes/modules/content/massage-description
+  include ../includes/modules/content/indications
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
   include ../includes/modules/content/more-massages
